[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hwp2pdf"
version = "0.2.0"
description = "Windows Hancom Office COM based HWP/HWPX to PDF/DOCX converter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Namun Cho", email = "namun.cho@gmail.com" },
]
dependencies = [
    "pywin32>=306; platform_system == 'Windows'",
]
keywords = ["hwp", "hwpx", "pdf", "docx", "hancom", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/z0nam/hwp2pdf"
Repository = "https://github.com/z0nam/hwp2pdf"
Issues = "https://github.com/z0nam/hwp2pdf/issues"
Releases = "https://github.com/z0nam/hwp2pdf/releases"

[project.scripts]
hwp2pdf = "hwp2pdf.cli:main"
hwp2pdf-gui = "hwp2pdf.app:main"

[tool.setuptools.packages.find]
where = ["src"]
